contact layout bug fix

--- a/ghostgram hybrid/styles/master.less
+++ b/ghostgram hybrid/styles/master.less
@@ -4351,11 +4351,18 @@ div.contactListBox.activeContact > div > div > ul {
 
 .memberTempName {
 	padding-top: 1rem;
+	max-width: 80%;
 }
 
 .memberTempPhoto {
 	padding-top: 0.5rem;
 	padding-left: 1rem;
+	max-width: 20%;
+}
+
+#channelMembers-listview > li > div {
+	width: 100%;
+	display: inline-flex;
 }
 
 /* Don's development styles...*/
